--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -18,127 +18,67 @@
                                                 alt="Generic placeholder image">
                                         </div>
                                         <div class="flex-grow-1 ms-3">
-                                            <a href="#!" class="float-end text-black"><i class="fas fa-times"></i></a>
+                                            {{!-- //agregar al carrito el producto. --}}
+                                            {{!-- <a href="api/carts/65393af63031ce561a8d198f/product/{{_id}}" class="float-end text-black"><i onclick="alert('aca deberia agregar al carrito.')" class="fas fa-shopping-cart"></i></a> --}}
+                                            <a href="" class="float-end text-black"><i onclick="alert('aca deberia agregar al carrito.')" class="fas fa-shopping-cart"></i></a>
                                             <h5 class="text-primary">{{title}}</h5>
 
                                             <div class="d-flex align-items-center">
                                                 <p class="fw-bold mb-0 me-5 pe-3">{{description}}</p>
                                                 <p class="fw-bold mb-0 me-5 pe-3">Código: {{code}}</p>
-                                                <p class="fw-bold mb-0 me-5 pe-3">$ {{price}}</p>
+                                                <p class="fw-bold mb-0 me-5 pe-3">Precio: $ {{price}}</p>
                                                 <p class="fw-bold mb-0 me-5 pe-3">Categoria: {{category}}</p>
-                                                <div class="def-number-input number-input safari_only">
-                                                    <button
-                                                        onclick="this.parentNode.querySelector('input[type=number]').stepDown()"
-                                                        class="minus"></button>
-                                                    <input class="quantity fw-bold text-black" min="0" name="quantity"
-                                                        value="{{stock}}" type="number">
-                                                    <button
-                                                        onclick="this.parentNode.querySelector('input[type=number]').stepUp()"
-                                                        class="plus">+</button>
-                                                </div>
+                                                 <p class="fw-bold mb-0 me-5 pe-3">Stock: {{stock}}</p>
+                                               
                                             </div>
                                         </div>
                                     </div>
 
                                     {{/each}}
                                     <hr class="mb-4" style="height: 2px; background-color: #1266f1; opacity: 1;">
-
-                                    {{!-- <div class="d-flex justify-content-between px-x">
-                                        <p class="fw-bold">Discount:</p>
-                                        <p class="fw-bold">95$</p>
-                                    </div>
-                                    <div class="d-flex justify-content-between p-2 mb-2"
-                                        style="background-color: #e1f5fe;">
-                                        <h5 class="fw-bold mb-0">Total:</h5>
-                                        <h5 class="fw-bold mb-0">2261$</h5>
-                                    </div> --}}
-
                                 </div>
-                                {{!-- <div class="col-lg-6 px-5 py-4">
 
-                                    <h3 class="mb-5 pt-2 text-center fw-bold text-uppercase">Payment</h3>
+                                </form>
+                                <nav>
+                                    <ul class="pagination center">
+                                        {{#if hasPrev}}
+                                        <li class="page-item">
+                                            <button type="button" class="btn btn-primary">
+                                                <a class="page-link" style="color:#fff" href="{{prev}}">Previous</a>
+                                        </li>
+                                        </button>
 
-                                    <form class="mb-5">
+                                        {{else}}
+                                        <li class="page-item">
+                                            <button type="button" class="btn btn-primary" disabled>
+                                                <a class="page-link" style="color:#fff" href="">Previous</a>
+                                        </li>
+                                        </button>
+                                        </li>
+                                        {{/if}}
 
-                                        <div class="form-outline mb-5">
-                                            <input type="text" id="typeText" class="form-control form-control-lg"
-                                                siez="17" value="1234 5678 9012 3457" minlength="19" maxlength="19" />
-                                            <label class="form-label" for="typeText">Card Number</label>
-                                        </div>
+                                        <li class="page-item">
+                                            <a class="page-link"
+                                                href="http://localhost:8084/products?limit={{#if limit}}{{limit}}{{else}}1{{/if}}&page={{page}}&sort={{#if sort}}{{sort}}{{else}}1{{/if}}">{{page}}</a>
+                                        </li>
 
-                                        <div class="form-outline mb-5">
-                                            <input type="text" id="typeName" class="form-control form-control-lg"
-                                                siez="17" value="John Smith" />
-                                            <label class="form-label" for="typeName">Name on card</label>
-                                        </div>
-
-                                        <div class="row">
-                                            <div class="col-md-6 mb-5">
-                                                <div class="form-outline">
-                                                    <input type="text" id="typeExp" class="form-control form-control-lg"
-                                                        value="01/22" size="7" id="exp" minlength="7" maxlength="7" />
-                                                    <label class="form-label" for="typeExp">Expiration</label>
-                                                </div>
-                                            </div>
-                                            <div class="col-md-6 mb-5">
-                                                <div class="form-outline">
-                                                    <input type="password" id="typeText"
-                                                        class="form-control form-control-lg"
-                                                        value="&#9679;&#9679;&#9679;" size="1" minlength="3"
-                                                        maxlength="3" />
-                                                    <label class="form-label" for="typeText">Cvv</label>
-                                                </div>
-                                            </div>
-                                        </div>
-
-                                        <p class="mb-5">Lorem ipsum dolor sit amet consectetur, adipisicing elit <a
-                                                href="#!">obcaecati sapiente</a>.</p>
-
-                                        <button type="button" class="btn btn-primary btn-block btn-lg">Buy now</button>
-                                        --}}
-
-                                        {{!-- <h5 class="fw-bold mb-5" style="position: absolute; bottom: 0;">
-                                            <a href="#!"><i class="fas fa-angle-left me-2"></i>Back to shopping</a>
-                                        </h5> --}}
-
-                                    </form>
-                                <nav >
-  <ul class="pagination center">
-   {{#if hasPrev}}
- <li class="page-item">
-    <button type="button" class="btn btn-primary">
-        <a class="page-link"style="color:#fff"  href="{{prev}}">Previous</a></li>
-    </button>
-    
-{{else}}
-  <li class="page-item">
-    <button type="button" class="btn btn-primary" disabled>
-        <a class="page-link" style="color:#fff" href="">Previous</a></li>
-    </button>    
-  </li>
-{{/if}}
-
-   <li class="page-item">
-  <a class="page-link" href="http://localhost:8084/products?limit={{#if limit}}{{limit}}{{else}}1{{/if}}&page={{page}}&sort={{#if sort}}{{sort}}{{else}}1{{/if}}">{{page}}</a>
-</li>
-
-{{#if hasNext}}
- <button type="button" class="btn btn-primary"   >
-        <a class="page-link" style="color:#fff" href="{{next}}">Next</a></li>
- </button>  
-{{else}}
-  <button type="button" class="btn btn-primary" style=""disabled>
-        <a class="page-link"style="color:#fff" href="">Next</a></li>
- </button>
-{{/if}}
-  </ul>
-</nav>
-                                </div>
+                                        {{#if hasNext}}
+                                        <button type="button" class="btn btn-primary">
+                                            <a class="page-link" style="color:#fff" href="{{next}}">Next</a></li>
+                                        </button>
+                                        {{else}}
+                                        <button type="button" class="btn btn-primary" style="" disabled>
+                                            <a class="page-link" style="color:#fff" href="">Next</a></li>
+                                        </button>
+                                        {{/if}}
+                                    </ul>
+                                </nav>
                             </div>
-
                         </div>
+
                     </div>
                 </div>
             </div>
         </div>
-    </section>
+</div>
+</section>
